--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.2.0",
   "private": true,
+  "proxy": "http://localhost:8001",
   "type": "module",
   "dependencies": {
     "react": "^18.3.1",
